[package]
name = "nem"
version = "0.1.0"
authors = ["Conrad Ratschan <conrad.ratschan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
thiserror = "1.0"

[dependencies.sdl2]
version = "0.34"
#default-features = false
#features = ["gfx", "image", "mixer", "ttf"]
