[package]
name = "nem"
version = "0.1.0"
authors = ["Conrad Ratschan <ratschance@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
lazy_static = "1.4.0"
thiserror = "1.0"
sdl2 = "0.34"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
